Fix - CICD pipeline 3